do not inline media relative css set display inline-block on call to action so they look correctly on small screens

--- a/app/assets/stylesheets/mailers/survey.scss
+++ b/app/assets/stylesheets/mailers/survey.scss
@@ -62,30 +62,8 @@ table {
   width: 43px;
 }
 
-@media screen { /*Thanks Outlook 2013! http://goo.gl/XLxpyl*/
-  td, h1, h2, h3 {
-    font-family: 'Droid Sans', 'Helvetica Neue', 'Arial', 'sans-serif' !important;
-  }
-}
-
-/* Mobile styles */
-@media only screen and (max-width: 480px) {
-  table[class="w320"] {
-    width: 320px !important;
-  }
-  td[class="mobile-block"] {
-    width: 100% !important;
-    display: block !important;
-  }
-  td[class="pusher"] {
-    width: 0 !important;
-  }
-  img[class="steps"] {
-    width: 28px !important;
-  }
-}
-
 .issue {
+  display: inline-block;
   border-radius: 2px;
   border-color: #414141;
   border-width: 1px;
@@ -97,6 +75,8 @@ table {
 }
 
 .take_survey {
+  display: inline-block;
+
   @extend .headline;
 
   background-color: #7f7f7f;
